--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,10 +2,17 @@
 <html>
 <head>
   <title>Blocipedia</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
+<body>
+<div class="container">
+     <ul class="nav nav-tabs">
+       <li><%= link_to "Blocipedia", root_path %></li>
+       <li><%= link_to "Wikis", wikis_path %></li>
+<div class="pull-right user-info">
  <% if user_signed_in? %>
    Signed in as: <strong><%= current_user.email %></strong> |
    <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> - <%= link_to "Sign Out", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
@@ -13,7 +20,8 @@
    <%= link_to "Sign Up", new_user_registration_path, :class => 'navbar-link'  %> -
    <%= link_to "Sign In", new_user_session_path, :class => 'navbar-link'  %>
  <% end %>
-<body>
+ </div>
+ </ul>
      <% if flash[:notice] %>
        <div class="alert alert-success">
          <button type="button" class="close" data-dismiss="alert">&times;</button>
@@ -28,6 +36,7 @@
     
 
 <%= yield %>
+</div>
 
 
 </body>
