--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -3,10 +3,12 @@
  <div class="row">
    <div class="col-md-8">
      <p><%= @wiki.body %></p>
+      
    </div>
    <div class="col-md-4">
-
+  <% unless current_user == @wiki.user || current_user.admin? %>
      <%= link_to "Edit", edit_wiki_path(@wiki), class: 'btn btn-success' %>
      <%= link_to "Delete Wiki", @wiki, method: :delete, class: 'btn btn-danger', data: {confirm: 'Are you sure you want to delete this wiki?'} %>
+   <% end %>
    </div>
  </div>
