--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -43,7 +43,7 @@
 
 <h3>Downgrade My Account</h3>
 
-<p> <%= button_to "Downgrade", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: current_user.standard!  %></p>
+<p> <%= button_to "Downgrade", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :downgrade  %></p>
 
 <%= link_to "Back", :back %>
 
