--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -1,4 +1,4 @@
-<h2>FIX IT <%= resource_name.to_s.humanize %></h2>
+<h2>Edit <%= resource_name.to_s.humanize %></h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
@@ -43,6 +43,6 @@
 
 <h3>Downgrade My Account</h3>
 
-<p> hello <%= button_to "Downgrade", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :downgrade %></p>
+<p> <%= button_to "Downgrade", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :downgrade %></p>
 
 <%= link_to "Back", :back %>
