--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -43,6 +43,6 @@
 
 <h3>Downgrade My Account</h3>
 
-<p> <%= button_to "Downgrade", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :downgrade %></p>
+<p> <%= button_to "Downgrade", registration_path(resource_name), data: { confirm: "Are you sure? Remember all your private posts will become public." }, method: :downgrade %></p>
 
 <%= link_to "Back", :back %>
