--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -40,9 +40,18 @@
 
 <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
 
+<% if current_user.premium? %>
 
 <h3>Downgrade My Account</h3>
 
-<p> <%= button_to "Downgrade", registration_path(resource_name), data: { confirm: "Are you sure? Remember all your private posts will become public." }, method: :downgrade %></p>
+<p> <%= button_to "Downgrade", users_downgrade_path, data: { confirm: "Are you sure? Remember all your private posts will become public." }, method: :get %></p>
 
 <%= link_to "Back", :back %>
+
+<% else %>
+
+<p> <%= button_to "Upgrade", new_charge_path, data: { confirm: "Are you sure?" }, method: :get %></p>
+
+<%= link_to "Back", :back %>
+
+<% end %>
