attempt to add collaborator, can add but not in user experience only in console

--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -6,6 +6,11 @@
      <small>
        submitted <%= time_ago_in_words(@wiki.created_at) %> ago by <%= @wiki.user.email %>
      </small>
+     <br>
+     <h3> Collaborators </h3>
+     <% @wiki.collaborators.each do |col|%>
+     <p> <%= User.all[col.user_id].email %> </p>
+     <% end %>
       
    </div>
    <div class="col-md-4">
