--- a/app/views/wikis/index.html.erb
+++ b/app/views/wikis/index.html.erb
@@ -1,11 +1,11 @@
  <h1>Wikis</h1>
  
  <div class="row">
-   <div class="col-md-8">
-
-   <div class="col-md-4">
-     <%= link_to "New Wiki", new_wiki_path, class: 'btn btn-success' %>
-   </div>
+  <div class="col-md-8">
+  <%= link_to "New Wiki", new_wiki_path, class: 'btn btn-success' %>
+</div>
+<br>
+   <div class="col-md-8" style="padding: 1em">
      <% Wiki.all.each do |wiki| %>
      <% if !wiki.private || current_user.premium? || current_user.admin? %> 
        <div class="media">
