--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -32,18 +32,18 @@
   </div>
 
   <div class="actions">
-    <%= f.submit "Update" %>
+    <%= f.submit "Update", class: 'btn btn-success' %>
   </div>
 <% end %>
 
 <h3>Cancel my account</h3>
 
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete ,class: 'btn btn-success' %></p>
 
 
 <h3>Downgrade My Account</h3>
 
-<p> <%= button_to "Downgrade", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :downgrade  %></p>
+<p> <%= button_to "Downgrade", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :downgrade, class: 'btn btn-success'  %></p>
 
 <%= link_to "Back", :back %>
 
