--- a/app/views/collaborators/_collaborator_form.html.erb
+++ b/app/views/collaborators/_collaborator_form.html.erb
@@ -2,15 +2,18 @@
       <h3>Add Collaborators</h3>
     
       <%= form_for [@wiki , Collaborator.new] do |c| %>
-        <%= email_field_tag :collaborator %>
-        <%= c.submit "Add collaborator", class: 'btn btn-primary' %>
+        <%= email_field_tag :collaborator ,nil, class: 'form-control' %>
+        <div class="button-space">
+        <%= c.submit "Add collaborator", class: 'btn btn-primary ' %>
+        </div>
       <% end %>
     
       <h3>Manage Collaborators</h3>
     
       <% @wiki.collaborators.each do |c| %>
+      
         <% user = User.find(c.user_id) %>
-        <%= user.email %>
+       <%= user.email %>
         <%= link_to "Delete", wiki_collaborator_path(@wiki, c), class: 'btn btn-danger', method: :delete%>
       <% end %>
     <% end %>
