--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,4 @@
+ <div></div>
  <div class="jumbotron">
    <h1>Blocipedia</h1>
    <p>Blocipedia is a place to write what you know and share with others!</p>
@@ -7,4 +8,7 @@
    </p>
  </div>
  
-<img src="/app/assets/images/Picture1.png" alt="two people"  width="100%">
+ <%= image_tag 'Picture1.png' , class: 'landing-img' %>
+ 
+ </div>
+ 
