--- a/app/views/wikis/edit.html.erb
+++ b/app/views/wikis/edit.html.erb
@@ -18,11 +18,13 @@
 
          <%= f.submit "Save", class: 'btn btn-success' %>
        </div>
+       <div class='private-box'>
        <% if current_user.admin? || current_user.premium? %>
           <div class="form-group">
            <%= f.label :private, class: 'checkbox' do %>
              <%= f.check_box :private %> Private wiki
          <% end %>
+         </div>
        </div>
       
     <% end %>
